--- a/css/index.css
+++ b/css/index.css
@@ -1,118 +1,326 @@
 @charset "utf-8";
 
-.row {max-width: 1038px; margin: 0 auto; }
+.row {max-width:1000px; margin:0 auto; padding:0 10px;}
+body {color: #555; }
 
-
-#header h1 {float: left;width: 30%; margin-top: 35px;}
-#header nav {float: right;width: 70%;margin-top: 35px;}
-#header nav .depth1 {position: relative;}
-#header nav .depth1 > li {float: left; width: 20%;text-align: center;position: relative; font-size: 17px;
-color: #555; font-weight: bold; padding: 15px 0px;}
-#header nav .depth1 > li> a {display: block; padding: 13px 0px;}
-
-.depth2 {position: absolute; top: 100%; left: 0;width: 100%; background:#fff;
-         opacity: 0; z-index: 999; transition: all 0.4s; font-weight: normal; font-size: 13px;}
-#header nav .depth1 > li:hover .depth2 {opacity: 1;}
-.depth2 > li {line-height: 2; transition: all 0.2s;}
-.depth2 > li > a {display: block;}
-.depth2 > li:hover {background: #3997dd; color: #fff;}
-
-
-
-/* section 구역 */
-#section {position: relative;}
-#section .line {margin-top: 60px ; width: 100px; height: 1px; background: #397dda; position: absolute; left: 50%;}
-#section .line:last-child { background: #fff;}
-#section h2 {font-size:35px ; text-align: center; margin-top: 70px; font-weight: bold;}
-#section p {font-size: 16px; padding-top: 19px; line-height: 1.4; text-align: center;
-margin-bottom: 30px;}
-
-
-
-/* section1  */
-
-#section .section1 {background: url(../img/main01.jpg) no-repeat; background-size: cover; height:570px ;
-position: relative;}
-#section .section1 .slidetxt { position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);
-text-align: center;}
-
-/* section2 */
-#section .section2 h2 {color: #555;}
-#section .section2 p {color: #777; font-size: 14px;}
-#section .section2 li {text-align: center;}
-#section .section2 li >div
-{background: #323233;  width: 170px; height: 170px; border-radius: 50%; display: inline-block;
-margin-top: 30px; margin-bottom: 30px; position: relative; transition: all 0.4s;}
-#section .section2 li >div:hover {
-    background: red;}
-#section .section2 li >a
-{border: 1px solid #000; display: inline-block; padding: 8px 25px; margin-bottom: 70px;}
-
-#section .section2 li {float: left; width: 23%; margin-right: 2.666%;}
-#section .section2 li:last-child {margin-right:0}
-
-
-
-
-
-
-
-
-
-/* section3 */
-
-#section .section3 {background: url(../img/bg_business.jpg) no-repeat; background-size: cover; padding: 100px 0px;}
-#section .section3 .text {text-align: center; color: #fff;}
-#section .section3 li {float: left; width: 32%; margin-right: 2%; margin-top: 80px; text-align: center;background: #397dda;
-color: #fff;}
-#section .section3 li:last-child { margin-right: 0%;}
-#section .section3 li img {width: 100%; }
-#section .section3 li > div {overflow: hidden; height: 240px; position: relative;}
-
-#section .section3 li > div > img {transition: all 0.4s; }
-#section .section3 li > div::before
-{content: ''; position: absolute; top: 0; right: 0; left: 0; bottom: 0; background: #000; opacity: 0;
-transition: all 0.4s;}
-#section .section3 li > div:hover::before
-{opacity: 0.5; z-index: 999;}
-#section .section3 li > div:hover  > img{ transform: scale(1.3); }
-/*   아직도 이해가 잘안가는곳 
-#section .section3 li > div:hover .intext
-{position: absolute; top: 60%; left: 50%; transform: translate(-50%,-50%); z-index: 999999; }
+/* header */
+#header { border-bottom:0px solid #ddd }
+#header > div { max-width:1200px; margin:0 auto; position:relative; }
+#header h1 { padding:20px 0; margin-left:70px }
+/* 블록요소들을 한줄로 정렬할때 float 정렬 대신 position:absolute를 사용할 때는
+  둘중에 키가 작은 요소에 적용한다.
 */
-#section .section3 li > div:hover .intext
-{position: absolute; top: 60%; left: 50%; transform: translate(-50%,-50%); z-index: 999999; }
-.intext h5{margin-bottom: 15px; font-weight: bold;}
+#header .open {display: none;}
+#header .nav { position:absolute; top:13px; right:30px; z-index:9999; }
+#header .nav .depth1 > li { float:left; position:relative }
 
-#section .section3 li h4 {padding: 40px 0px 10px; font-weight: bold;}
-#section .section3 li p {padding: 0px 25px 15px 25px; font-size: 14px; }
+#header .nav .depth1 > li > a { 
+    display:block; padding:30px 45px;
+    font-size:17px; text-align:center;
+    font-weight:bold
+}
+#header .nav .depth1 > li.on > a { 
+  color: #397dda;
+}
+.depth2 { position:absolute; top:100%; width:140%;
+    left:50%; transform:translate(-50%);
+    text-align:center; background:#fff; font-size:12px;
+    height:0; overflow:hidden; transition:all 0.5s;
+}
+#header .nav .depth1 > li:nth-child(1).on .depth2 {
+    height: 76px;
+}
+#header .nav .depth1 > li:nth-child(2).on .depth2 {
+    height: 76px;
+}
+#header .nav .depth1 > li:nth-child(3).on .depth2 {
+    height: 38px;
+}
+#header .nav .depth1 > li:nth-child(4).on .depth2 {
+    height: 38px;
+}
+#header .nav .depth1 > li:nth-child(5).on .depth2 {
+    height: 114px;
+}
+/* #header .nav .depth1 > li:hover .depth2 {
+    height:auto; 
+} */
+#header .nav .depth2 > li > a { 
+    display:block; padding:13px 0px; font-weight:bold; 
+}
+#header .nav .depth2 > li:hover > a { 
+    background:#397dda; color:#fff;
+}
+button {outline: none;}
+
+/* section */
+/* 슬라이드 */
+.article1 .slide_group {position: relative;}
+.article1 .slide_group .slick-arrow {
+    position: absolute; top: 50%; transform: translateY(-50%);
+ background: none; border: none;z-index: 9999;
+ font-size: 60px;color: #fff}
+ .article1 .slide_group .prev{left: 100px;}
+ .article1 .slide_group .next{right: 100px;}
+ .article1 .slide_group .slick-dots {
+     position: absolute; bottom: 0; left: 50%; transform: translate(-50%);}
+/* 막대 버튼 애니메이션 */
+.article1 .slide_group .slick-dots li { display: inline-block; margin: 0 5px;
+width: 100px; height: 2px; background: #999;
+position: relative; bottom: 20px;}
+.article1 .slide_group .slick-dots li button
+{width: 0px;height: 2px; 
+    background:rgb(29, 146, 241); border: none;
+color: transparent; outline: none;
+position: absolute; top: 0; left: 0;}
+.article1 .slide_group .slick-dots li.slick-active button 
+{animation: barani 3s both;}
+@keyframes barani { from{width: 0px;}to {width: 100px;}}
+
+/* 슬라이드 자동재생/멈충 버튼 */
+.article1 {position: relative;}
+.article1 .playstop {position: absolute; bottom: 0;left: 50%;
+    transform: translate(230px); bottom: 20px;
+color: #fff; background: none; border: none;}
+
+
+
+
+     /* 
+동그라미 버튼 */
+     /* .article1 .slide_group .slick-dots li { display: inline-block; margin: 0 5px 10px 5px;}
+.article1 .slide_group .slick-dots li button
+{width: 5px;height: 5px; border-radius: 50%;
+    background:rgba(255,255,255,0.5); border: none;
+text-indent: 99999px; overflow: hidden; outline: none;}
+.article1 .slide_group .slick-dots li.slick-active button
+{background: rgba(255,255,255,1);}
+ */
 
 
 
 
 
-/* section4 */
-#section .section4 h2 {color: #555;}
-#section .section4 p {color: #777;}
+
+.article1 .slide { }
+.article1 .slide_group .slide1 {
+    height:750px; 
+    background:url(../img/main01.jpg) no-repeat center;
+    background-size:cover; 
+    position:relative;
+ }
+ .article1 .slide_group .slide2 {
+    height:750px; 
+    background:url(../img/main02.jpg) no-repeat center;
+    background-size:cover; 
+    position:relative;
+ }
+ .article1 .slide_group .slide3 {
+    height:750px; 
+    background:url(../img/main03.jpg) no-repeat center;
+    background-size:cover; 
+    position:relative;
+ }
+ .article1 .slide_group .slide4 {
+    height:750px; 
+    background:url(../img/main04.jpg) no-repeat center;
+    background-size:cover; 
+    position:relative;
+ }
+.article1 .slide_group  .slide .txt {  
+    position:absolute;
+    top:50%; left:50%;
+    transform:translate(-50%, -50%);
+    text-align:center;
+    color:#fff;
+}
+.article1 .slide_group  .slide.slick-cloned .txt {  
+    opacity: 0;
+}
+.article1 .slide_group  .slide  .txt h2 { 
+    font-size:50px; font-weight:bold; 
+    text-shadow:0px 0px 4px #555;
+    margin-bottom:25px;
+}
+.article1 .slide_group  .slide.slick-active  .txt h2 { 
+    animation: fadeInDown 0.5s both 0.6s;
+}
+.article1 .slide_group  .slide  .txt p { 
+    font-size:17px; line-height:1.8;
+    font-weight:bold; 
+    text-shadow:0px 0px 4px #555;
+}
+.article1 .slide_group  .slide.slick-active  .txt p { 
+    animation: fadeInUp 0.5s both 0.6s;
+}
 
 
 
 
+/* COMPANY INTRODUCE 구역 */
+.article2 { padding-top:61px; padding-bottom:61px }
+#section .title2 { text-align: center; 
+    color: #555555; font-size: 35px;
+    font-weight: 600; line-height: 50px;
+    position:relative; }
+#section .title2::before { 
+    content:'';
+    width:100px; height:1px; background:#397dda;
+    position:absolute; top:0px; 
+    left:50%; transform:translate(-50%); }
+#section .comment {
+    text-align: center; color: #777777;
+    font-size: 15px; font-weight: 400;
+    line-height: 25px; padding-top: 19px; }
+
+.article2 ul li {
+    float:left;
+    width:23%;
+    text-align:center; 
+    margin-right:2.6666%;
+    margin-top:60px; 
+}
+.article2 ul li:nth-child(4) { 
+    margin-right:0%;
+}
+.article2 ul li > div { 
+    background:#323232;
+    display:inline-block;
+    border-radius:50%; 
+    overflow:hidden;
+    transition:all 0.3s ease-out;
+}
+.article2 ul li > div:hover { 
+    background:#fe0000;
+    transition:all 0.3s ease-in;
+}
+.article2 ul li > h3 {
+    color: #424242;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 22px;
+    text-align: center;
+    padding-top: 35px;
+}
+.article2 ul li > p {
+    color: #777777;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 18px;
+    padding-left:30px;
+    padding-right:30px;
+    letter-spacing: -1px;
+}
+.article2 ul li > a {
+    display:inline-block;
+    color: #1e1e1e;
+    font-size: 12px;
+    padding: 10px 46px 10px 46px;
+    border: 1px solid #1e1e1e;
+}
+
+/* BUSINESS INDUSTRY 구역 */
+.article3 {
+    background:url(../img/bg_business.jpg) no-repeat center;
+    background-size:cover; 
+    color:#fff; 
+    padding-top:61px;
+    padding-bottom:61px; 
+}
+#section .article3 .title2 { color:#fff }
+#section .article3 .comment { color:#fff }
+#section .article3 .title2::before { 
+    background:#fff; }
+
+.article3 ul li {
+    float:left; width:30.33%;
+    margin-right:4.505%;
+    margin-top:60px;
+    text-align:center; 
+}    
+.article3 ul li:nth-child(3) {
+    margin-right:0%;
+}    
+.article3 .imgbox {
+    position:relative; overflow:hidden;
+ }
+.article3 .imgbox::before {
+    content:'';
+    position:absolute; top:0; left:0; bottom:0; right:0;
+    background:rgba(0,0,0,0);
+    transition:all 0.5s; z-index:1
+ } 
+ .article3 .imgbox:hover::before {
+    background:rgba(0,0,0,0.5); 
+ } 
+.article3 .imgbox .sbox {
+    position:absolute; z-index:2;
+    top:50%; left:50%;
+    transform:translate(-50%, -50%);
+    opacity:0; transition:all 0.5s; 
+ }
+ .article3 .imgbox:hover .sbox {
+    opacity:1; 
+ }
+ .article3 .imgbox .sbox p:nth-child(1)
+ {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 22px;
+ }
+ .article3 .imgbox .sbox p:nth-child(2)
+{
+    font-size: 13px;
+    line-height: 20px;
+    padding-top: 15px;
+    padding-bottom: 18px;
+}
+
+.article3 .imgbox img {
+    transition:all 0.5s;
+} 
+.article3 .imgbox:hover img {
+    transform:scale(1.4);
+}
+.article3 .txtbox 
+{
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 22px;
+    background:#397dda;
+    padding:15px 28px;
+}
+.article3 .txtbox p:nth-child(2)
+{
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 20px;
+    background:#397dda;
+    padding-top:20px;
+}
+.article4 { padding-top:61px;  }
+.article4 .map { height:270px; margin-top:20px }
 
 
+/* footer */
+#footer {background: #303030; padding: 25px 0 15px;
+    text-align: center; color: #8d8b8b; font-size: 12px;}
+#footer p:nth-child(1) a { font-weight: bold; display: inline-block;
+    font-size: 13px; color: #ccc; padding: 0px 3px 0px 8px;
+}
+#footer p:nth-child(2) {margin-top: 17px; margin-bottom: 9px;
+    line-height: 1.6;}
 
-
-
-
-
-/* footer구역 */
-#footer {background: #303030;
-    padding: 30px 0px;text-align: center;
-    font-size: 14px;line-height: 18px;
-    color:#fff;}
-#footer .snav a  {display: inline-block; padding: 15px 20px 15px 0px; color: #ccc; font-weight: bold; }
-#footer .info  { color: #8d8b8b; line-height: 1.5;}
-
-
-
-    
+.gotop a {
+    position: fixed;
+    bottom: 15%; right: 10%;
+    color: #fff;
+    background-color: rgba(0,0,0,0.7);
+    display: inline-block;
+    width: 42px; height: 42px;
+    text-align: center; line-height: 42px;
+    font-size: 12px;
+}
+.gotop a:hover {background: orange;}
