--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,10 @@ body {color: #555; }
 
 /* header */
 #header { border-bottom:0px solid #ddd }
+#header.on {
+    position: fixed; width: 100%; top: 0; left: 0;
+    z-index: 99999; background: #fff;
+}
 #header > div { max-width:1200px; margin:0 auto; position:relative; }
 #header h1 { padding:20px 0; margin-left:70px }
 /* 블록요소들을 한줄로 정렬할때 float 정렬 대신 position:absolute를 사용할 때는
@@ -127,10 +131,10 @@ text-indent: 99999px; overflow: hidden; outline: none;}
     background-size:cover; 
     position:relative;
  }
-.article1 .slide_group  .slide .txt {  
+ .article1 .slide_group  .slide .txt {  
     position:absolute;
-    top:50%; left:50%;
-    transform:translate(-50%, -50%);
+    top:50%; left:0%; right: 0;
+    transform:translateyY(-50%);
     text-align:center;
     color:#fff;
 }
